template.yaml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: >
  SAM Template for the primary shared resources
  between prod and dev pharos deployments, including
  igw, nat, rds, vpc and proxy configuration.

Parameters:
  RDSName:
    Type: String
    Default: RDS
  ProxyName:
    Type: String
    Default: Proxy
  RDSProxyPolicyName:
    Type: String
    Default: proxy-policy
  Port:
    Type: String
    Default: "5432"
  RDSInstancePolicyName:
    Type: String
    Default: rds-policy

  ExportBucket:
    Type: String
    Default: pharos-database-export-bucket

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true

  IGW:
    Type: AWS::EC2::InternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref IGW

  NATGatewayEIP:
    Type: AWS::EC2::EIP
    DependsOn: VPC
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NATGatewayEIP
    Properties:
      AllocationId: !GetAtt NATGatewayEIP.AllocationId
      SubnetId: !Ref LambdaSubnet

  DatabaseSubnetA:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: "AWS::Region"
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/20
      MapPublicIpOnLaunch: True

  DatabaseSubnetB:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: "AWS::Region"
      VpcId: !Ref VPC
      CidrBlock: 10.0.16.0/20
      MapPublicIpOnLaunch: True

  LambdaSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select
        - 1
        - !GetAZs
          Ref: "AWS::Region"
      VpcId: !Ref VPC
      CidrBlock: 10.0.32.0/20

  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC

  NatRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "VPC"

  NatRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref NatRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  DatabaseSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref DatabaseSubnetA

  DatabaseSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref DatabaseSubnetB

  LambdaSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref NatRouteTable
      SubnetId: !Ref LambdaSubnet

  InternetRouteRule:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  SubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: !Join ["-", [!Ref AWS::StackName, "SubnetGroup"]]
      DBSubnetGroupDescription: "Subnet Group"
      SubnetIds:
        - !Ref DatabaseSubnetA
        - !Ref DatabaseSubnetB

  InstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: !Join ["-", [!Ref AWS::StackName, "SecurityGroup"]]
      GroupDescription: "RDS traffic"
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: "0.0.0.0/0"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref Port
          ToPort: !Ref Port
          CidrIp: 181.164.177.48/32
          Description: "WRZ de oro"

  InstanceSecurityGroupAllowSelf:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref InstanceSecurityGroup
      IpProtocol: tcp
      FromPort: !Ref Port
      ToPort: !Ref Port
      SourceSecurityGroupId: !GetAtt InstanceSecurityGroup.GroupId

  DBAdminSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Join ["-", [!Ref AWS::StackName, DBAdminSecret]]
      GenerateSecretString:
        SecretStringTemplate: '{"username": "dbadmin"}'
        GenerateStringKey: "password"
        PasswordLength: 30
        ExcludeCharacters: '"@/\'

  # DBProxySecret:
  #   Type: AWS::SecretsManager::Secret
  #   Properties:
  #     Name: !Join ["-", [!Ref AWS::StackName, DBProxySecret]]
  #     GenerateSecretString:
  #       SecretStringTemplate: '{"username": "dbproxy"}'
  #       GenerateStringKey: "password"
  #       PasswordLength: 30
  #       ExcludeCharacters: '"@/\'

  RDSInstance:
    Type: AWS::RDS::DBInstance
    DependsOn: DBAdminSecret
    DeletionPolicy: Delete
    UpdateReplacePolicy: Delete
    Properties:
      PubliclyAccessible: True
      AllocatedStorage: "20"
      AssociatedRoles:
        - FeatureName: s3Export
          RoleArn: !GetAtt RDSInstanceRole.Arn
      DBInstanceClass: db.t3.micro
      DBSubnetGroupName: !Ref "SubnetGroup"
      DBInstanceIdentifier: !Join ["-", [!Ref AWS::StackName, !Ref RDSName]]
      Engine: postgres
      EngineVersion: "15"
      AllowMajorVersionUpgrade: True
      MasterUsername:
        Fn::Sub: "{{resolve:secretsmanager:${DBAdminSecret}::username}}"
      MasterUserPassword:
        Fn::Sub: "{{resolve:secretsmanager:${DBAdminSecret}::password}}"
      VPCSecurityGroups:
        - !Ref InstanceSecurityGroup

  SecretRDSAttachment:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: DBAdminSecret
      TargetId:
        Ref: RDSInstance
      TargetType: AWS::RDS::DBInstance

  RDSInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service:
                - rds.amazonaws.com
      Policies:
        - PolicyName:
            !Join ["-", [!Ref AWS::StackName, !Ref RDSInstancePolicyName]]
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - S3:PutObject
                Resource:
                  - !Sub arn:aws:s3:::${ExportBucket}/*

  RDSProxyRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service:
                - rds.amazonaws.com
      Policies:
        - PolicyName:
            !Join ["-", [!Ref AWS::StackName, !Ref RDSProxyPolicyName]]
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                Resource:
                  - !Ref DBAdminSecret
              - Effect: Allow
                Action: "kms:Decrypt"
                Resource: "*"
                Condition:
                  StringEquals:
                    kms:ViaService: !Sub secretsmanager.${AWS::Region}.amazonaws.com

  RDSProxy:
    Type: AWS::RDS::DBProxy
    DependsOn: RDSInstance
    Properties:
      Auth:
        - AuthScheme: SECRETS
          IAMAuth: DISABLED
          SecretArn: !Ref DBAdminSecret
      DBProxyName: !Join ["-", [!Ref AWS::StackName, !Ref ProxyName]]
      EngineFamily: POSTGRESQL
      IdleClientTimeout: 600
      DebugLogging: True
      RequireTLS: True
      RoleArn: !GetAtt RDSProxyRole.Arn
      VpcSubnetIds:
        - !Ref DatabaseSubnetA
        - !Ref DatabaseSubnetB
      VpcSecurityGroupIds:
        - !Ref InstanceSecurityGroup

  ProxyTargetGroup:
    Type: AWS::RDS::DBProxyTargetGroup
    DependsOn: RDSProxy
    Properties:
      DBProxyName: !Join ["-", [!Ref AWS::StackName, !Ref ProxyName]]
      DBInstanceIdentifiers:
        - !Ref RDSInstance
      TargetGroupName: default
      ConnectionPoolConfigurationInfo:
        MaxConnectionsPercent: 100
        MaxIdleConnectionsPercent: 12
        ConnectionBorrowTimeout: 20

Outputs:
  RDSInstance:
    Description: RDS instance name
    Value: !Ref RDSInstance
    Export:
      Name: !Sub ${AWS::StackName}-RDSInstance
  RDSEndpoint:
    Description: RDS endpoint or host
    Value: !GetAtt [RDSInstance, Endpoint.Address]
    Export:
      Name: !Sub ${AWS::StackName}-RDSEndpoint
  Secret:
    Description: RDS master username, password, and connection details
    Value: !Ref DBAdminSecret
    Export:
      Name: !Sub ${AWS::StackName}-Secret
  RDSPort:
    Description: RDS port
    Value: !GetAtt [RDSInstance, Endpoint.Port]
    Export:
      Name: !Sub ${AWS::StackName}-Port
  RDSProxy:
    Description: Proxy
    Value: !GetAtt RDSProxy.DBProxyArn
    Export:
      Name: !Sub ${AWS::StackName}-RDSProxyArn
  RDSProxyEndpoint:
    Description: Proxy endpoint
    Value: !GetAtt RDSProxy.Endpoint
    Export:
      Name: !Sub ${AWS::StackName}-RDSProxyEndpoint
  VPCInstance:
    Description: VPC for RDS and proxy
    Value: !Ref VPC
    Export:
      Name: !Sub ${AWS::StackName}-VPCInstance
  VPCSecurityGroup:
    Description: Security group associated with the vpc
    Value: !Ref InstanceSecurityGroup
    Export:
      Name: !Sub ${AWS::StackName}-VPCSG
  DatabaseSubnetA:
    Description: Subnet AZ 0
    Value: !Ref DatabaseSubnetA
    Export:
      Name: !Sub ${AWS::StackName}-DatabaseSubnetA
  DatabaseSubnetB:
    Description: Subnet AZ 1
    Value: !Ref DatabaseSubnetB
    Export:
      Name: !Sub ${AWS::StackName}-DatabaseSubnetB
  LambdaSubnet:
    Description: Subnet AZ 2
    Value: !Ref LambdaSubnet
    Export:
      Name: !Sub ${AWS::StackName}-LambdaSubnet
